# git-trace-analysis

./: Cargo.toml  README.md  go.mod  main.go  trace.go
src/: event.rs  main.rs
