[package]
name = "git-trace-analysis"
version = "0.1.0"
authors = ["Son Luong Ngoc <son.luong@booking.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]

[dependencies.serde]
version = "1.0.106"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.51"
